Aggiunta proprietà che elimina il border:focus del search

--- a/CSS/global_style.css
+++ b/CSS/global_style.css
@@ -292,6 +292,11 @@
   transition: left 0.1s ease-out;
 }
 
+input[type="text"]:focus {
+  outline: none; /* Rimuove il bordo di focus */
+  /* Aggiungi qui eventuali altri stili desiderati */
+}
+
 
 
 .heart-logo {
