--- a/CSS/global_style.css
+++ b/CSS/global_style.css
@@ -223,6 +223,9 @@
 }
 .menu-search {
   display: flex;
+  z-index: 4;
+  background-color: white;
+  border-radius: 50px;
 }
 
 .menu-search-shop {
@@ -270,16 +273,17 @@
   position: relative;
   background-color: rgb(255, 255, 255);
   border-radius: 1.25rem;
+  border: none;
 }
 /* Overlay */
-.overlay-search {
+.overlay-search.show{
   position: fixed;
   top: 0;
-  left: -100%;
+  left: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1000;
+  z-index: 3;
   transition: left 0.1s ease-out;
 }
 
