fixed svqQuit and searchbar.active on css

--- a/CSS/global_style.css
+++ b/CSS/global_style.css
@@ -258,6 +258,7 @@
   display: inline-block;
   margin-left: -50px;
   z-index: 1000;
+  cursor: pointer;
 }
 
 #searchbar {
@@ -274,6 +275,7 @@
   background-color: rgb(255, 255, 255);
   border-radius: 1.25rem;
   border: none;
+  width: 300px;
 }
 /* Overlay */
 .overlay-search.show{
