--- a/CSS/media-iphone.css
+++ b/CSS/media-iphone.css
@@ -717,13 +717,41 @@
 
 
 /* STYLE FOOTER2 MEDIA IPHONE */
+.accordion {
+  background-color: transparent;
+  color: white;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  transition: 0.4s;
+}
+/* 
+.active, .accordion:hover {
+  background-color: ; 
+} */
+
+.panel {
+  display: none;
+  padding: 0 18px;
+  margin: -16px;
+  background-color: transparent;
+  color: white;
+  overflow: hidden;
+}
+.box1-logo-mobile {
+  display: flex;
+}
 
 .container-footer2-generale {
   width: 100%;
   background-color: #1f1d48;
 }
 
-.f_section2 {
+.f_section2-mobile {
   max-width: 100rem;
   margin: 0 auto;
   padding-top: 30px;
@@ -737,6 +765,7 @@
 
 .div1-footer2 {
   display: flex;
+  flex-direction: column;
   background-color: #1f1d48;
   margin-bottom: 40px;
 }
@@ -749,15 +778,14 @@
   display: flex;
   flex-direction: column;
   height: auto;
-  width: 30%;
+  width: fit-content;
   background-color: #1f1d48;
 }
 
 .box1-logo {
   display: flex;
-  flex-direction: column;
   align-items: self-start;
-  gap: 90px;
+  /* gap: 90px; */
   height: auto;
   width: 100%;
   margin-bottom: 20px;
@@ -776,7 +804,7 @@
   color: #f0f0f0;
   padding: 7px;
   margin: 15px;
-  width: 45%;
+  width: 100%;
   gap: 15px;
   cursor: pointer;
 }
@@ -784,6 +812,7 @@
 .button-f2 {
   font-size: medium;
   background: transparent;
+  text-decoration: none;
   border: none;
   color: white;
 }
@@ -801,7 +830,8 @@
   flex-direction: row;
   flex-wrap: wrap;
   height: auto;
-  width: 70%;
+  width: 390px;
+  font-size: 0.875rem;
   background-color: #1f1d48;
 }
 
@@ -810,7 +840,7 @@
   flex-direction: column;
   gap: 30px;
   height: auto;
-  width: 32%;
+  width: 100%;
   background-color: #1f1d48;
   color: white;
   margin: 10px;
@@ -821,6 +851,7 @@
 .box2-ul h3 {
   font-size: 1rem;
   font-weight: 700;
+  margin-left: -14px;
 }
 
 .li-f2 {
@@ -842,10 +873,23 @@
 }
 
 .subscribe-footer2 {
+  display: none;
+  flex-direction: column;
+  gap: 10px;
+  margin: 15px;
+}
+
+.subscribe-footer2-2 {
+  color: #f8f8f8;
   display: flex;
   flex-direction: column;
   gap: 10px;
   margin: 15px;
+}
+
+.subscribe-footer2-2 h3{
+  font-size: 1rem;
+  padding-bottom: 10px;
 }
 
 .email-footer2 {
@@ -856,7 +900,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 200px;
+  width: 307px;
 }
 
 .email-button-f2 {
@@ -871,7 +915,8 @@
 .social-footer2 {
   display: flex;
   flex-direction: column;
-  width: 300px;
+  /* width: 300px; */
+  margin-left: 20px;
   gap: 30px;
 }
 
@@ -881,13 +926,17 @@
 }
 
 .subscribe-footer2 h3 {
-  font-size: 1rem;
+  font-size: 0.75rem;
   font-weight: 500;
 }
 
 .svg-social-f2 {
   display: flex;
   gap: 10px;
+}
+
+.li{
+  border-bottom: 1px solid;
 }
 
 .link-logo-f2 {
@@ -899,15 +948,53 @@
 }
 
 .li-f2-link:hover {
+  display: flex;
   text-decoration: underline;
 }
 
+.f_section3 {
+  max-width: 100rem;
+  margin: 0 auto;
+  /* margin-top: 70px; */
+  font-family: Arial, sans-serif;
+  font-size: small;
+  background-color: #1f1d48;
+  color: white;
+  padding-top: 20px;
+}
+.container-footer3 {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.hr-accordion{
+  display: block;
+  width: 100%;
+}
+/* .about-us{
+  border-top: 1px solid;
+  border-bottom: 1px solid
+}
+
+.more-from-us{
+  border-top: 1px solid;
+  border-bottom: 1px solid
+}
+
+.attractions{
+  border-top: 1px solid;
+} */
+
 /* STYLE FOOTER3 MEDIA IPHONE */
 
-.container-footer3{
+.container-footer3-mobile{
+  display: flex;
   flex-wrap: wrap;
 }
   /* --------------- */
+
+
+
 
   .carousel-title{
     font-size: 1.25rem;
@@ -932,6 +1019,8 @@
  border-radius: 1.25rem;
  width: 140px;
  }
+
+
 
 }
 
@@ -983,7 +1072,7 @@
 }
 @media screen and (max-width: 768px) {
   .testo {
-    display: none;
+    /* display: none; */
   }
   .element {
     flex-basis: calc(33.33% - 20px); 
@@ -1011,9 +1100,7 @@
     margin-bottom: 22px;
   }
   
-  .container-footer3 {
-    margin-top: 22px; 
-  }
+  
 
 }
 
