Aggiunta a regola per l'overflow y a riga 747 global.css

--- a/CSS/global_style.css
+++ b/CSS/global_style.css
@@ -746,6 +746,7 @@ li {
 /* Hide the default scrollbar */
 .carousel-wrapper {
   overflow-x: auto;
+  overflow-y: hidden;
   scrollbar-width: thin;
   scrollbar-color: #888 transparent;
 }
